# sibguti

./: README.md
msnp/lab1/: .gitignore  CMakeLists.txt  README.md
msnp/lab1/tests/: CMakeLists.txt  README.md  client.c  server.c
